widget/cocoa/nsAppShell.mm
@@ -38,10 +38,6 @@
 
 using namespace mozilla::widget;
 
-// defined in nsChildView.mm
-extern nsIRollupListener * gRollupListener;
-extern nsIWidget         * gRollupWidget;
-
 // defined in nsCocoaWindow.mm
 extern int32_t             gXULModalLevel;
 
@@ -963,8 +959,10 @@ nsAppShell::AfterProcessNextEvent(nsIThreadInternal *aThread,
 
   NSString *sender = [aNotification object];
   if (!sender || ![sender isEqualToString:@"org.mozilla.gecko.PopupWindow"]) {
-    if (gRollupListener && gRollupWidget)
-      gRollupListener->Rollup(0);
+    nsIRollupListener* rollupListener = nsBaseWidget::GetActiveRollupListener();
+    nsCOMPtr<nsIWidget> rollupWidget = rollupListener->GetRollupWidget();
+    if (rollupWidget)
+      rollupListener->Rollup(0, nullptr);
   }
 
   NS_OBJC_END_TRY_ABORT_BLOCK;
